[package]
authors = ["TatriX <tatrics@gmail.com>"]
name = "realworld"
version = "0.4.0"
edition = "2018"

[dependencies]
rocket = { version = "0.4.2", default-features = false }
rocket_cors = { version = "0.5.1", default-features = false }
serde = { version = "1.0.103", features = ["derive"] }
serde_json = "1.0.44"
rust-crypto = "0.2.36"
chrono = { version = "0.4.10", features = ["serde"] }
diesel = { version = "1.4.3", features = ["postgres", "chrono"] }
validator = "0.10.0"
validator_derive = "0.10.0"
slug = "0.1.4"
rand = "0.7.2"
dotenv = "0.15.0"
frank_jwt = "3.1.1"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["json", "diesel_postgres_pool"]

[dev-dependencies]
once_cell = "1.2.0"

[features]
default = ["random-suffix"]

# Enable generation of random suffix when making article slug. This
# allows having multiple articles with the same title.
random-suffix = []
